# bump-anything

./: LICENSE.txt  README.md  bump.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  publish.yml  tests.yml
bump_anything/: __main__.py  file_result.py  git.py
bumpanything/: __main__.py
tests/: __init__.py  conftest.py  decorators.py  test_bump.py  test_edge.py  test_git.py  test_increment.py  utils.py
