[project]
name = "bump-anything"
version = "2.0.0-beta.2"
description = "A CLI utility for bumping the version of any file type"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
maintainers = [
    {name = 'Caleb Evans', email = 'caleb@calebevans.me'}
]
license = {file = 'LICENSE.txt'}
keywords = ["semver", "semantic", "version", "versioning", "bump", "increment"]
dependencies=[
    "semver >= 3"
]

[project.urls]
homepage = "https://github.com/caleb531/bump-anything"
documentation = "https://github.com/caleb531/bump-anything#readme"
repository = "https://github.com/caleb531/bump-anything"
changelog = "https://github.com/caleb531/bump-anything/releases"

[project.scripts]
bump = "bumpanything.__main__:main"
bump-anything = "bumpanything.__main__:main"

[build-system]
requires = ["setuptools", "wheel"]

# Configuration for coverage.py (https://pypi.python.org/pypi/coverage)

[tool.coverage.run]
# Enable branch coverage
branch = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    "pragma: no cover",
    # Ignore non-runnable code
    "if __name__ == .__main__.:",
    "pass",
]

# Only check coverage for source files
include = ["bumpanything/*.py"]
