[project]
name = "bump-anything"
version = "2.3.0"
description = "A CLI utility for bumping the version of any file type"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
maintainers = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
license = "MIT"
keywords = ["semver", "semantic", "version", "versioning", "bump", "increment"]
dependencies=[
    "semver>=3",
]

[project.urls]
homepage = "https://github.com/caleb531/bump-anything"
documentation = "https://github.com/caleb531/bump-anything#readme"
repository = "https://github.com/caleb531/bump-anything"
changelog = "https://github.com/caleb531/bump-anything/releases"

[project.scripts]
bump = "bumpanything.__main__:main"
bump-anything = "bumpanything.__main__:main"

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "bumpanything"
module-root = ""

[dependency-groups]
dev = [
    "coverage==7.2.7",
    "nose2==0.13.0",
    "ruff>=0.12.0",
    "tomli==2.0.1",
]

[tool.ruff]
include = ["**/*.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # isort
    "I",
    # perflint
    "PERF",
]

# Configuration for coverage.py (https://pypi.python.org/pypi/coverage)

[tool.coverage.run]
# Enable branch coverage
branch = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    "pragma: no cover",
    # Ignore non-runnable code
    "if __name__ == .__main__.:",
    "pass",
]

# Only check coverage for source files
include = ["bumpanything/*.py"]
