[project]
name = "bump-anything"
version = "2.3.0"
description = "A CLI utility for bumping the version of any file type"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
maintainers = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
license = "MIT"
keywords = ["semver", "semantic", "version", "versioning", "bump", "increment"]
dependencies=[
    "semver>=3",
]

[project.urls]
homepage = "https://github.com/caleb531/bump-anything"
documentation = "https://github.com/caleb531/bump-anything#readme"
repository = "https://github.com/caleb531/bump-anything"
changelog = "https://github.com/caleb531/bump-anything/releases"

[project.scripts]
bump = "bumpanything.__main__:main"
bump-anything = "bumpanything.__main__:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "bumpanything"
module-root = ""

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.12.0",
    "tomli==2.0.1",
]

[tool.ruff]
include = ["**/*.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # isort
    "I",
    # perflint
    "PERF",
]
